{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 53,
  "lineage": "8fb4dd01-a66c-11a5-c0d1-356916c7def8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab8f2fb349d9a2fc",
            "arn": "arn:aws:ec2:us-east-1:805046891371:elastic-ip/eipalloc-0ab8f2fb349d9a2fc",
            "domain": "vpc",
            "id": "eipalloc-0ab8f2fb349d9a2fc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-194-61-142.compute-1.amazonaws.com",
            "public_ip": "32.194.61.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "image-processor-prod-eip-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-eip-1",
              "Project": "image-processor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cdde0b99827b4bd",
            "arn": "arn:aws:ec2:us-east-1:805046891371:elastic-ip/eipalloc-01cdde0b99827b4bd",
            "domain": "vpc",
            "id": "eipalloc-01cdde0b99827b4bd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-194-64-132.compute-1.amazonaws.com",
            "public_ip": "32.194.64.132",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "image-processor-prod-eip-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-eip-2",
              "Project": "image-processor"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:internet-gateway/igw-0e777e2a6c551301f",
            "id": "igw-0e777e2a6c551301f",
            "owner_id": "805046891371",
            "tags": {
              "Name": "image-processor-prod-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-igw",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ab8f2fb349d9a2fc",
            "association_id": "eipassoc-00e6d47f2a0fc4360",
            "connectivity_type": "public",
            "id": "nat-07a4a59d3eea8c25d",
            "network_interface_id": "eni-0dddc6eba3dd1e6fa",
            "private_ip": "10.0.1.174",
            "public_ip": "32.194.61.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01183b7f2d49771ff",
            "tags": {
              "Name": "image-processor-prod-nat-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-nat-1",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cdde0b99827b4bd",
            "association_id": "eipassoc-05dc7812fa0409b0b",
            "connectivity_type": "public",
            "id": "nat-07ebca4a41708170a",
            "network_interface_id": "eni-0e48f3f421308177f",
            "private_ip": "10.0.2.62",
            "public_ip": "32.194.64.132",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-016ed2d8be0c6bf77",
            "tags": {
              "Name": "image-processor-prod-nat-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-nat-2",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-01abbeccdbac73573",
            "id": "rtb-01abbeccdbac73573",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07a4a59d3eea8c25d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-prod-rt-private-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-private-1",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-08b42c5d6d9884b04",
            "id": "rtb-08b42c5d6d9884b04",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07ebca4a41708170a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-prod-rt-private-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-private-2",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:route-table/rtb-0e044fc3be222d6cb",
            "id": "rtb-0e044fc3be222d6cb",
            "owner_id": "805046891371",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e777e2a6c551301f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "image-processor-prod-rt-public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-rt-public",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df6427881a3af78e",
            "route_table_id": "rtb-01abbeccdbac73573",
            "subnet_id": "subnet-0d92b99f76acced6d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0485152ec937755f8",
            "route_table_id": "rtb-08b42c5d6d9884b04",
            "subnet_id": "subnet-0b4d347ad80d75566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08fc32b78f6ebfc5b",
            "route_table_id": "rtb-0e044fc3be222d6cb",
            "subnet_id": "subnet-01183b7f2d49771ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc456629af828d95",
            "route_table_id": "rtb-0e044fc3be222d6cb",
            "subnet_id": "subnet-016ed2d8be0c6bf77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "crop_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-0fecb6deb317e47f2",
            "description": "SG para Lambda crop",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS hacia S3 y SQS endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0fecb6deb317e47f2",
            "ingress": [],
            "name": "image-processor-prod-sg-crop-lambda",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-prod-sg-crop-lambda"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-crop-lambda",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upload_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-08698eae9f805cf93",
            "description": "SG para Lambda upload",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS hacia S3 y SQS endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-08698eae9f805cf93",
            "ingress": [],
            "name": "image-processor-prod-sg-upload-lambda",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-prod-sg-upload-lambda"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-upload-lambda",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:security-group/sg-0a15d399246a25952",
            "description": "SG para VPC Endpoint de SQS",
            "egress": [],
            "id": "sg-0a15d399246a25952",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Desde lambdas",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08698eae9f805cf93",
                  "sg-0fecb6deb317e47f2"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "image-processor-prod-sg-vpce-sqs",
            "name_prefix": "",
            "owner_id": "805046891371",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "image-processor-prod-sg-vpce-sqs"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-sg-vpce-sqs",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.crop_lambda",
            "aws_security_group.upload_lambda",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-0d92b99f76acced6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d92b99f76acced6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-prod-private-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-private-1",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-0b4d347ad80d75566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4d347ad80d75566",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-prod-private-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-private-2",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-01183b7f2d49771ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01183b7f2d49771ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-prod-public-1"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-public-1",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:subnet/subnet-016ed2d8be0c6bf77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016ed2d8be0c6bf77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805046891371",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "image-processor-prod-public-2"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-public-2",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc/vpc-0c6147e35984fc35c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0353894eee4db2d6a",
            "default_route_table_id": "rtb-04dae9d44ac36390e",
            "default_security_group_id": "sg-03ccc64dc97182da0",
            "dhcp_options_id": "dopt-04624349cc8a268d5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c6147e35984fc35c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04dae9d44ac36390e",
            "owner_id": "805046891371",
            "tags": {
              "Name": "image-processor-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpc",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc-endpoint/vpce-0e1842cbb50b5da98",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e1842cbb50b5da98",
            "ip_address_type": "ipv4",
            "owner_id": "805046891371",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"arn:aws:s3:::image-processor-prod-images-067566b1/*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-01abbeccdbac73573",
              "rtb-08b42c5d6d9884b04"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "image-processor-prod-vpce-s3"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpce-s3",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_s3_bucket.images",
            "aws_subnet.public",
            "aws_vpc.main",
            "random_id.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805046891371:vpc-endpoint/vpce-0fd1e09742445131d",
            "dns_entry": [
              {
                "dns_name": "vpce-0fd1e09742445131d-6wx9g1k9.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fd1e09742445131d-6wx9g1k9-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fd1e09742445131d-6wx9g1k9-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06442963U8NR4R0CA3QE"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z034098823OOO7X2E2DF9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fd1e09742445131d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03df44cc53006479f",
              "eni-0966ce7be071d9dd7"
            ],
            "owner_id": "805046891371",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a15d399246a25952"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.16",
                "subnet_id": "subnet-0d92b99f76acced6d"
              },
              {
                "ipv4": "10.0.12.249",
                "subnet_id": "subnet-0b4d347ad80d75566"
              }
            ],
            "subnet_ids": [
              "subnet-0b4d347ad80d75566",
              "subnet-0d92b99f76acced6d"
            ],
            "tags": {
              "Name": "image-processor-prod-vpce-sqs"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "image-processor-prod-vpce-sqs",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c6147e35984fc35c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.crop_lambda",
            "aws_security_group.upload_lambda",
            "aws_security_group.vpce_sqs",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}